--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,7 @@
     
     <link rel="stylesheet" href="../static/css/styles.css">
     <link rel="stylesheet" href="../static/css/login.css">
+    <link rel="stylesheet" href="../static/css/footer.css">
  
 </head>
 <body>
@@ -36,6 +37,10 @@
         </form>
         <p>Don't have an account? <a href="{{ url_for('auth.signup') }}">Sign up here</a></p>
     </div>
+
+    <footer>
+        <p>&copy; 2025 Manatracker. All rights reserved.</p>
+    </footer>
 </body>
 </html>
 
