--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="../static/images/logo2.jpeg">
     
     <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="../static/css/footer.css">
 </head>
 <body>
     <div class="logo-container">
@@ -14,7 +15,7 @@
             <img src="../static/images/logo2.jpeg" alt="Logo" class="rounded-logo">
         </a>
     </div>
-    
+
     <div class="container">
         <h1>Manatracker</h1>
         <p>Track. Analyze. Win.</p>
@@ -23,5 +24,9 @@
             <a href="{{ url_for('auth.signup') }}" class="button">Sign Up</a>
         </div>
     </div>
+
+    <footer>
+        <p>&copy; 2025 Manatracker. All rights reserved.</p>
+    </footer>
 </body>
 </html>
