--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,6 +8,7 @@
     
     <link rel="stylesheet" href="../static/css/styles.css">
     <link rel="stylesheet" href="../static/css/signup.css">
+    <link rel="stylesheet" href="../static/css/footer.css">
 
 </head>
 <body>
@@ -35,9 +36,26 @@
                 <label for="confirm-password">Confirm Password:</label>
                 <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm your password" required>
             </div>
+            {% with messages = get_flashed_messages(with_categories=True) %}
+    {% if messages %}
+        <div class="messages">
+            {% for category, message in messages %}
+                {% if category == 'error' %}
+                    <p class="{{ category }}">{{ message }}</p>
+                {% endif %}
+            {% endfor %}
+        </div>
+    {% endif %}
+{% endwith %}
+
+
             <button type="submit" class="button">Sign Up</button>
         </form>
         <p>Already have an account? <a href="{{ url_for('auth.login') }}">Login here</a></p>
     </div>
+
+    <footer>
+        <p>&copy; 2025 Manatracker. All rights reserved.</p>
+    </footer>
 </body>
 </html>
